# risky-business-mcp

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  SYSTEM_PROMPT.md  asset_inventory.json  config.env.example  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
.claude/: init
context/summaries/: data-stack.md  project-description.md
docs/: activity.md
risky_demo/: .gitignore  CLAUDE.md  elevenlabs_integration_plan.md  test_elevenlabs_integration.py  voice_briefing.py
